2003-03-08  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: Bug fix when changing key, added tooltips
	* seahorse-key: Added ::get_fingerprint and ::get_id
	* seahorse-context: Updated to use seahorse_key_get_id

2003-03-07  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager: Refined startup
	* seahorse-widget:
	* seahorse-key-widget:
	Removed ::new_component
	* seahorse-text-editor: No longer uses seahorse_widget_new_component
	* configure.in: Require gtk+-2.2
	* seahorse-key-properties: Moved to dialogs, now a property window,
	moved uids to own tab, added prefs to uids, subkeys are separate tabs,
	signatures part of primary key
	* seahorse-context: ::finalize doesn't list keys if are none

2003-03-06  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-widget: Removed component option/property

2003-03-05  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Separated key-pair listing from non-pairs,
	removed some code duplication, changed signer methods to
	::(get|set)_default_key and use SeahorseKeyPair
	* seahorse-signer-menu-item: Uses SeahorseKeyPair instead of SeahorseKey
	* seahorse-key: Removed ::can_sign
	* seahorse-key-pair: Added ::can_sign
	* seahorse-signer-menu: Updated to use SeahorseKeyPair
	* seahorse-ops-key: Updated for context changes
	* data/seahorse.schemas.in: Changed default_key_id to default_key,
	updated description

2003-03-04  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-widget: Removed unnecessary callbacks

2003-03-03  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Added gconf notification for preferences
	* data/seahorse.schemas.in: Added toolbar style & visibility and
	statusbar visibility schemas
	* seahorse-widget: Remove component progress code and callbacks
	* seahorse-key-manager: Added gconf notification and settings for
	toolbar style & visibility and statusbar visibility

	* Released 0.7.1
