@@ -19,6 +19,8 @@ src/dialogs/seahorse-export.glade2
 src/dialogs/seahorse-generate.c
 src/dialogs/seahorse-generate.glade2
 src/dialogs/seahorse-import.glade2
+src/dialogs/seahorse-key-properties.c
+src/dialogs/seahorse-key-properties.glade2
 src/dialogs/seahorse-passphrase.c
 src/dialogs/seahorse-preferences.glade2
 src/dialogs/seahorse-recipients.c
@@ -38,8 +40,6 @@ src/seahorse-encrypt-recipients-store.c
 src/seahorse-key-manager-store.c
 src/seahorse-key-manager.c
 src/seahorse-key-manager.glade2
-src/seahorse-key-properties.c
-src/seahorse-key-properties.glade2
 src/seahorse-key-store.c
 src/seahorse-ops-data.c
 src/seahorse-ops-file.c
