@@ -7,7 +7,7 @@
 
 <widget class="GnomeApp" id="key-manager">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Seahorse Key Manager</property>
+  <property name="title" translatable="yes">Seahorse - GPG Key Manager</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
