@@ -1,3 +1,8 @@
+2003-03-08  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* POTFILES.in: Changed location of seahorse-key-properties,
+	fixes bug 107879
+
 2003-03-04  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
