@@ -1,8 +1,11 @@
 2003-03-08  Jacob Perkins  <jap1@users.sourceforge.net>
 
-	* seahorse-key-properties: Bug fix when changing key, added tooltips
+	* seahorse-key-properties: Bug fix when changing key, added tooltips,
+	single user IDs don't have notebook, moved subkey buttons to own line
 	* seahorse-key: Added ::get_fingerprint and ::get_id
 	* seahorse-context: Updated to use seahorse_key_get_id
+	* seahorse-key-manager: Changed title as per bug #107411
+	* seahorse-key-widget: Changed index property to accept up to GMAXUINT
 
 2003-03-07  Jacob Perkins  <jap1@users.sourceforge.net>
 
